# gb-rust

./: .gitignore  shell.nix
desktop/: Cargo.toml
desktop/src/: main.rs
gb_core/: Cargo.toml
gb_core/src/: lib.rs
