[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies.sdl2]
#version = "0.35.2"
#features = ["bundled", "raw-window-handle", "static-link"]

[dependencies]
gb_core = { path = "../gb_core" }
sdl2 = "^0.34.3"
